@@ -14,7 +14,7 @@ $sendmail = "/usr/lib/sendmail";
 # Indicate whether to try and compress output if the client browser
 # supports it.  This can make a tremdous difference in bandwidth,
 # especially over slow links.
-$use_compression = 1;
+$use_compression = 0;
 
 # Location of gzip.  Gzip is used only if you don't have Compress::Zlib
 # installed.  Note, if running with mod_perl, you _must_ have Compress:Zlib
@@ -32,19 +32,16 @@ $cvsviewer = "";
 #$cvsviewer = "http://localhost.localdomain/cgi-bin/viewcvs.cgi/";
 #$cvsviewer = "http://localhost.localdomain/cgi-bin/cvsweb.cgi/";
 
-# How the CVS repository is accessed.  For local access, this is set as the
-# empty string.
-#$cvsaccess = ":ext:sits\@cvs.cvsplot.sourceforge.net:";
-$cvsaccess = "";
-
 # Set this to the path of the CVS repository.
 $cvsrep = "";
 #$cvsrep = "/usr/local/cvsroot";
 #$cvsrep = "/home/sits/cvs";
 
-# The CVS command to execute in order to retrieve file data.  The revision
-# argument and filename is appended to the end of this string.
-$cvscmd = "/usr/bin/cvs -d ${cvsaccess}${cvsrep} co -p";
+# The CVS command to execute in order to retrieve the contents for a
+# specific revision and file.  Note this is in single quotes, as it
+# will be eval'ed at runtime.
+$cvscmd = '/usr/bin/cvs -d $cvsrep co -p -r $revision $filename';
+#$cvscmd = '/usr/bin/curl ${cvsviewer}~checkout~/${filename}?rev=${revision}&content-type=text/plain';
 
 # The location of the codestriker.css file on this site.
 $codestriker_css = "/codestriker.css";
@@ -52,13 +49,6 @@ $codestriker_css = "/codestriker.css";
 # The default viewing mode to use in the URL when creating a topic.  Can
 # be either $NORMAL_MODE, $COLOURED_MODE or $COLOURED_MONO_MODE.
 $default_topic_create_mode = $NORMAL_MODE;
-
-# Set the CVS_RSH environment variable appropriately.  The indentity
-# file refers to a user which has ssh access to the above CVS repository.
-# If the repository is local, this setting won't be required, as $cvsrep will
-# just be the local pathname.  Make sure this is in a secure location.
-#$ENV{'CVS_RSH'} = "ssh -i /var/www/codestriker/identity";
-#$ENV{'CVS_RSH'} = "ssh";
 
 # Default width of tabs.  Most developers expect this to be 8, but
 # some expect to see 4.  This is also stored in the user's cookie, and
