@@ -1,5 +1,9 @@
 Version 1.4.4:
 
+* Made the CVS file data retrieve command expanded within an eval for
+  flexibility.  Included example using the curl command in
+  codestriker.conf.
+
 * Can now view coloured diff mode either in monospace font (requires
   more real-estate) or in variable-width font (harder to read code).
   The choice can be made dynamically. [Note the monospaced diff mode
